# industrial-ml-predictive-maintenance

./: README.md  main.py  mlflow.db  pyproject.toml
.docs/: about-dataset.md
notebooks/: test.py
